[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/ui/DebugMenu.gd" id="1_debug"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_debug")

[node name="TapTrigger" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 0

[node name="TapTimer" type="Timer" parent="."]
process_callback_mode = 0

[node name="MenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DebugThemeCheck" type="CheckButton" parent="MenuPanel/MarginContainer/VBox"]
layout_mode = 2
button_pressed = true
text = "Enable debug theme"

[node name="ResetDebugThemeButton" type="Button" parent="MenuPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Reset debug theme"
size_flags_horizontal = 4

[node name="ReturnToSetupButton" type="Button" parent="MenuPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Return to setup"
size_flags_horizontal = 4
